# gpt

./: .gitignore  CMakeLists.txt  README.md  compile.sh  cpu_main  gpu_main  main.c  main.cu  run_gpt.py  test.sh  time.csv
